--- a/platforms/android/res/values/strings.xml
+++ b/platforms/android/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="app_name">Gdolim</string>
     <string name="launcher_name">@string/app_name</string>
     <string name="activity_name">@string/launcher_name</string>
+    
+    <string name="google_app_id">1:34722650210:android:b2100f4de3ebbc50</string>
+    <string name="google_api_key">AIzaSyAQldsliQRjJgFdWnMto6GywMNJDw7PcXA</string>
 </resources>
